--- a/mnt/etc/skel/.config/waybar/style.css
+++ b/mnt/etc/skel/.config/waybar/style.css
@@ -93,7 +93,6 @@ button:hover {
 #pulseaudio,
 #wireplumber,
 #custom-media,
-#tray,
 #mode,
 #idle_inhibitor,
 #scratchpad,
@@ -119,9 +118,22 @@ button:hover {
     font-weight: 600;
 }
 
-#battery {
-    background-color: rgba(43, 48, 59, 0.7);
+#cpu,
+#disk,
+#backlight,
+#memory,
+#battery,
+#temperature {
+    margin:  0 2px;
+    margin-top: 10px;
     border-radius: 0;
+}
+
+
+#battery {
+    /* background-color: rgba(43, 48, 59, 0.7); */
+    background-color: transparent;
+    margin-right: 20px;
 }
 
 battery.charging, battery.plugged {
@@ -154,15 +166,11 @@ label:focus {
 #cpu {
     /* background-color: #2ecc71; */
     background-color: transparent;
-    margin:  0 15px;
-    margin-top: 10px;
 }
 
 #memory {
     /* background-color: #9b59b6; */
     background-color: transparent;
-    margin:  0 15px;
-    margin-top: 10px;
 }
 
 
@@ -171,7 +179,8 @@ label:focus {
 }
 
 #backlight {
-    background-color: #90b1b1;
+    /*background-color: #90b1b1;*/
+    background-color: transparent;
 }
 
 
@@ -210,8 +219,6 @@ label:focus {
 
 #temperature {
     background-color: transparent;
-    margin: 0 25px 0 15px;
-    margin-top: 10px;
 }
 
 #temperature.critical {
@@ -219,7 +226,13 @@ label:focus {
 }
 
 #tray {
-    background-color: rgba(43, 48, 59, 0.7);
+    font-size: 5px;
+    margin: 0 10px 0 0px;
+    padding: 0 13px 0 7px;
+    border-radius: 50px;
+    margin-top: 10px;
+    background-color:rgba(10, 10, 10, 0.7);
+    color: rgb(57, 180, 0);
 }
 
 #tray > .passive {
@@ -241,7 +254,7 @@ label:focus {
 }
 
 #mpd {
-    background-color: rgba(58, 179, 1, 0.8);
+    background-color: rgba(49, 155, 0, 0.8);
     color: #fff;
     font-weight: 600;
     transition: .3s;
